--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
-# Binaries for programs and plugins
-*.exe
-*.dll
-*.so
-*.dylib
+# Add any directories, files, or patterns you don't want to be tracked by version control
 
-# Test binary, build with `go test -c`
-*.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
-
-# Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
-.glide/
+vendor
+glide.lock
+biller_connector_ptpos
+configurations/App.yaml
+logs
+*.lint
+.DS_Store
+*.log
+.idea
+commands/schema
